--- a/snippets/templates/user/add_user.html
+++ b/snippets/templates/user/add_user.html
@@ -45,7 +45,7 @@
                                     </div>
 
                                     <div class="sm:col-span-6">
-                                        <label for="{{ form.image.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ form.image.label }}</label>
+                                        <label for="photo" class="block text-sm font-medium text-gray-700">photo</label>
                                         <div class="mt-1 flex items-center">
                                             <span class="h-12 w-12 rounded-full overflow-hidden bg-gray-100">
                                                 <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
@@ -57,16 +57,16 @@
                                     </div>
 
                                     <div class="sm:col-span-6">
-                                        <label for="{{ form.image.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ form.image.label }} </label>
+                                        <label for="photo" class="block text-sm font-medium text-gray-700">photo </label>
                                         <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
                                             <div class="space-y-1 text-center">
                                                 <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
                                                     <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                                 <div class="flex text-sm text-gray-600">
-                                                    <label for="{{ form.image.id_for_label }}" class="relative cursor-pointer bg-white rounded-md font-medium text-primary-600 hover:text-primary-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary-500">
+                                                    <label for="photo" class="relative cursor-pointer bg-white rounded-md font-medium text-primary-600 hover:text-primary-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary-500">
                                                         <span>Upload a file</span>
-                                                        <input id="file-upload" name="{{ form.image.html_name }}" type="file" class="sr-only">
+                                                        <input id="file-upload" name="image" type="file" class="sr-only">
                                                     </label>
                                                     <p class="pl-1">or drag and drop</p>
                                                 </div>
