--- a/snippets/templates/user/user_list.html
+++ b/snippets/templates/user/user_list.html
@@ -31,7 +31,7 @@
                                     <td class="px-6 py-4 whitespace-nowrap">
                                         <div class="flex items-center">
                                             <div class="flex-shrink-0 h-10 w-10">
-                                                <img src="{{ object.customuser.image }}" class="h-10 w-10 rounded-full"  alt="">
+                                                <img src="" class="h-10 w-10 rounded-full"  alt="">
                                             </div>
                                             <div class="ml-4">
                                                 <div class="text-sm font-medium text-gray-900">{{ object.lastname }}</div>
