--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -8,10 +8,16 @@
         <div class="flex flex-col justify-center">
             <h2 class='text-center font-semibold text-xl py-6' >Blog List </h2>
             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <form class="form-inline ml-8 mt-2 mt-md-0" action="{% url 'search_results' %}" method="get">
+                    {% csrf_token %}
+                    <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button type="submit">Search</button>
+                </form>
+
                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
 
-                        <table class="min-w-full divide-y divide-gray-200">
+                        <table id="dataTable" class="min-w-full divide-y divide-gray-200">
                             <thead class="bg-gray-100">
                                 <tr>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
@@ -23,32 +29,12 @@
                                     </th>
                                 </tr>
                             </thead>
-                            {% for post in post_list %}
-                                <tbody class="bg-white divide-y divide-gray-200">
-                                    <tr class="hover:blue-100">
-                                        <td class="px-6 py-2 whitespace-nowrap">
-                                            <div class="text-sm font-medium text-gray-900">
-                                                <a href="{% url 'post_detail' post.pk %}">{{ post.author }}</a>
-                                            </div>
-                                        </td>
-                                        <td class="px-6 py-2 whitespace-nowrap">
-                                            <div class="text-sm text-gray-900">{{ post.title }}</div>
-                                        </td>
-                                        <td class="px-6 py-2 whitespace-nowrap">
-                                            <div class="text-sm text-gray-500">jane.cooper@example.com</div> </td>
-                                        <td class="px-6 py-2 whitespace-nowrap text-sm text-gray-500">{{ post.body }}</td>
-                                        <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
-                                            <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                                        </td>
-                                    </tr>
-
-                                    <!-- More people... -->
-                                </tbody>
-                            {% endfor %}
+                            {% include 'search_results.html' %}
                         </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 {% endblock content %}
