--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -14,15 +14,15 @@
                     <form class="p-1 flex justify-end" action="{% url 'search_results' %}" method="get">
                         <input name="q" class="form-inline mt-2 mt-md-0 rounded-md" type="text" placeholder="Search" aria-label="Search">
                     </form>
-                    <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                    <div class="shadow overflow-hidden border-b border-secondary-200 sm:rounded-lg">
 
-                        <table id="dataTable" class="min-w-full divide-y divide-gray-200">
-                            <thead class="bg-gray-100">
+                        <table id="dataTable" class="min-w-full divide-y divide-secondary-200">
+                            <thead class="bg-secondary-100">
                                 <tr>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Title</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created Date</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Updated Date</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Body</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Title</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Created Date</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Updated Date</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-secondary-500 uppercase tracking-wider">Body</th>
                                     <th scope="col" class="relative px-6 py-3">
                                         <span class="sr-only ">Edit</span>
                                         <span class="sr-only">Delete</span>
