--- a/crud/templates/post_edit.html
+++ b/crud/templates/post_edit.html
@@ -10,12 +10,12 @@
                 <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
                     <div class="max-w-3xl mx-auto">
 
-                        <form action="" method="post" novalidate enctype="multipart/form-data" class="space-y-8 divide-gray-200">
+                        <form action="" method="post" novalidate enctype="multipart/form-data" class="space-y-8 divide-secondary-200">
                             {% csrf_token %}
                             <div class="space-y-8">
                                 <div>
-                                    <h3 class="text-lg leading-6 font-medium text-gray-900">Blog post edit</h3>
-                                    <p class="mt-1 text-sm text-gray-500">You can edit your post.</p>
+                                    <h3 class="text-lg leading-6 font-medium text-secondary-900">Blog post edit</h3>
+                                    <p class="mt-1 text-sm text-secondary-500">You can edit your post.</p>
                                 </div>
 
                                 <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
@@ -24,9 +24,9 @@
                                     <div class="sm:col-span-4">
 
                                         <div class="mt-1 flex rounded-md shadow-sm">
-                                            <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm"> Title</span>
+                                            <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-secondary-300 bg-secondary-50 text-secondary-500 sm:text-sm"> Title</span>
                                             <input type="text" name="{{ form.title.html_name }}" id="{{ form.title.id }}" autocomplete="username" value="{{ form.title.value }}"
-                                                class="flex-1 focus:ring-primary-500 focus:border-primary-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300">
+                                                class="flex-1 focus:ring-primary-500 focus:border-primary-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-secondary-300">
                                         </div>
                                         {% for error in form.author.errors %}
                                             <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span></div>
@@ -34,13 +34,13 @@
                                     </div>
                                     <!--body-->
                                     <div class="sm:col-span-6">
-                                        <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-gray-700"> {{form.body.label}} </label>
+                                        <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
                                         <div class="mt-1">
                                             <textarea id="{{ form.body.id_for_label }}" name="{{ form.body.name }}" rows="5" value="{{ form.body.value }}"
-                                                class="shadow-sm text-gray-500 focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-md border border-gray-300 rounded-md" >
+                                                class="shadow-sm text-secondary-500 focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-md border border-secondary-300 rounded-md" >
                                             </textarea>
                                         </div>
-                                        <p class="mt-2 text-sm text-gray-500">Edit your post content.</p>
+                                        <p class="mt-2 text-sm text-secondary-500">Edit your post content.</p>
                                         {% for error in form.body.errors %}
                                             <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span>
                                             </div>
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="pt-5">
                                     <div class="flex justify-end">
-                                        <button type="reset" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Cancel</button>
+                                        <button type="reset" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Cancel</button>
                                         <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Save</button>
                                     </div>
                                 </div>
