--- a/crud/templates/search_results.html
+++ b/crud/templates/search_results.html
@@ -1,18 +1,18 @@
 
-<tbody class="bg-white divide-y divide-gray-200">
+<tbody class="bg-white divide-y divide-secondary-200">
     {% for post in post_list %}
-        <tr class="hover:blue-100">
+        <tr class="hover:bg-indigo-100">
             <td class="px-6 py-2 whitespace-nowrap">
-                <div class="text-sm font-medium text-gray-900">
+                <div class="text-sm font-medium text-secondary-900">
                     <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
                 </div>
             </td>
             <td class="px-6 py-2 whitespace-nowrap">
-                <div class="text-sm text-gray-900">{{ post.author }}</div>
+                <div class="text-sm text-secondary-900">{{ post.author }}</div>
             </td>
             <td class="px-6 py-2 whitespace-nowrap">
-                <div class="text-sm text-gray-500">{{ post.last_updated }}</div> </td>
-            <td class="px-6 py-2 whitespace-nowrap text-sm text-gray-500">{{ post.body }}</td>
+                <div class="text-sm text-secondary-500">{{ post.last_updated }}</div> </td>
+            <td class="px-6 py-2 whitespace-nowrap text-sm text-secondary-500">{{ post.body }}</td>
             <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
                 <a href="{% url 'post_edit' post.pk %}" class="text-indigo-600 hover:text-indigo-900 pr-2">Edit</a>
                 <a href="{% url 'post_delete' post.pk %}" class="text-indigo-600 hover:text-indigo-900">Delete</a>
