--- a/crud/templates/post_delete.html
+++ b/crud/templates/post_delete.html
@@ -1,22 +1,90 @@
 <!-- templates/post_delete.html -->
 {% extends "base_crud.html" %}
-
+{##}
+{#{% block content %}#}
+{#    <div class= "container mx-auto">#}
+{#        <div class="w-full p-4">#}
+{#            <div class="bg-white shadow overflow-hidden sm:rounded-lg">#}
+{#                <div class="px-4 py-5 sm:px-6">#}
+{#                    <h3 class="text-lg leading-6 font-medium text-secondary-900">Delete </h3>#}
+{#                    <p class="mt-1 max-w-2xl text-sm text-secondary-500">Verify before saying yes.</p>#}
+{#                </div>#}
+{#                <div class="border-t border-secondary-200 px-4 py-5 sm:p-0">#}
+{#                    <form action="" method="post">#}
+{#                    {% csrf_token %}#}
+{#                    <div class="space-y-8">#}
+{#                        <p>Are you sure you want to delete "{{ post.title }}"?</p>#}
+{#                        <div class="flex justify-end pt-2">#}
+{#                            <a href="{% url 'home' %}"><button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">#}
+{#                                Cancel#}
+{#                            </button></a>#}
+{#                            <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">#}
+{#                                Confirm</button>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </form>#}
+{#                </div>#}
+{##}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 {% block content %}
-    <div class= "container mx-auto">
-        <div class="flex justify-center ">
-            <div class="w-1/3 shadow-lg p-6 rounded-md mt-8 bg-white">
-                <h1 class='font-semibold'>Delete post</h1>
-                <form action="" method="post">{% csrf_token %}
-                    <p>Are you sure you want to delete "{{ post.title }}"?</p>
-                    <div class="flex justify-end pt-2">
-                        <a href="{% url 'home' %}"><button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
-                            Cancel
-                        </button></a>
-                        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
-                            Confirm</button>
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <!--
+      Background overlay, show/hide based on modal state.
+
+      Entering: "ease-out duration-300"
+        From: "opacity-0"
+        To: "opacity-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100"
+        To: "opacity-0"
+    -->
+            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+
+            <!-- This element is to trick the browser into centering the modal contents. -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+            <!--
+      Modal panel, show/hide based on modal state.
+
+      Entering: "ease-out duration-300"
+        From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        To: "opacity-100 translate-y-0 sm:scale-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100 translate-y-0 sm:scale-100"
+        To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+    -->
+            <div class="relative inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-danger-100 sm:mx-0 sm:h-10 sm:w-10">
+                            <!-- Heroicon name: outline/exclamation -->
+                            <svg class="h-6 w-6 text-danger-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                            </svg>
+                        </div>
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Erase object</h3>
+                            <div class="mt-2">
+                                <p class="text-sm text-gray-500">Are you sure you want to erase this object? All of your data will be permanently removed. <br><br>   This action cannot be undone.</p>
+                            </div>
+                        </div>
                     </div>
-                </form>
+                </div>
+                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-danger-600 text-base font-medium text-white hover:bg-danger-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-danger-500 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
+                        <a href="{% url 'home' %}">
+                            <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
+                        </a>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+
 {% endblock content %}
