--- a/crud/templates/post_detail.html
+++ b/crud/templates/post_detail.html
@@ -7,8 +7,8 @@
         <div class="w-full p-4">
             <div class="bg-white shadow overflow-hidden sm:rounded-lg">
                 <div class="px-4 py-5 sm:px-6">
-                    <h3 class="text-lg leading-6 font-medium text-secondary-900">Applicant Information</h3>
-                    <p class="mt-1 max-w-2xl text-sm text-secondary-500">Personal details and application.</p>
+                    <h3 class="text-lg leading-6 font-medium text-secondary-900">Post Information</h3>
+                    <p class="mt-1 max-w-2xl text-sm text-secondary-500">Personal details and post.</p>
                 </div>
                 <div class="border-t border-secondary-200 px-4 py-5 sm:p-0">
                     <dl class="sm:divide-y sm:divide-secondary-200">
