--- a/crud/templates/post_edit.html
+++ b/crud/templates/post_edit.html
@@ -5,8 +5,8 @@
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class= "container mx-auto ">
 
-        <div class="" style="">
-            <div class="bg-white">
+        <div class="w-full p-4">
+            <div class="bg-white shadow overflow-hidden sm:rounded-lg">
                 <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
                     <div class="max-w-3xl mx-auto">
 
@@ -36,9 +36,8 @@
                                     <div class="sm:col-span-6">
                                         <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
                                         <div class="mt-1">
-                                            <textarea type="text" id="{{ form.body.id_for_label }}" name="{{ form.body.name }}" rows="5" value="{{ form.body.value }}"
-                                                class="p-2 shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-md border border-secondary-300 rounded-md" >
-                                            </textarea>
+                                            <textarea id="{{ form.body.id_for_label }}" name="{{ form.body.name }}" rows="3" class="max-w-lg p-2 shadow-sm block w-full focus:ring-primary-500 focus:border-primary-500 sm:text-sm border border-gray-300 rounded-md">{{ form.body.value }}</textarea>
+
                                         </div>
                                         <p class="mt-2 text-sm text-secondary-500">Edit your post content.</p>
                                         {% for error in form.body.errors %}
